--- a/requirements.txt
+++ b/requirements.txt
@@ -5,6 +5,9 @@ Django==4.1.7
 django-model-utils==4.3.1
 django-recaptcha==3.0.0
 idna==3.4
+MetaTrader5==5.0.44
+numpy==1.24.2
+Pillow==9.4.0
 psycopg2==2.9.5
 requests==2.28.2
 sqlparse==0.4.3
